Refactored the whole thing to work with Lollipop's AppComapt v21 and to use navigation drawer instead of tabs

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string-array name="navDrawerTitles">
+        <item>Home</item>
+        <item>Settings</item>
+        <item>Quit</item>
+    </string-array>
+
     <string-array name="settingNames">
         <item>Forwarding Targets</item>
     </string-array>
