--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,20 +1,34 @@
-<android.support.v4.view.ViewPager
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main_viewPager"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:elevation="3dp"
+    tools:context=".MainActivity">
 
-    <android.support.v4.view.PagerTabStrip
-        android:id="@+id/tabs_strip"
+    <FrameLayout
+        android:id="@+id/main_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:background="@color/teal_lightest"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:textSize="@dimen/tabs_text"
-        android:saveEnabled="true">
-    </android.support.v4.view.PagerTabStrip>
+        android:layout_height="match_parent"
+        android:background="@color/material_teal_900">
 
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar">
+        </include>
+    </FrameLayout>
 
-</android.support.v4.view.ViewPager>
+    <ListView
+        android:id="@+id/drawer_list"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:scrollbars="vertical"
+        android:choiceMode="singleChoice"
+        android:background="?attr/colorPrimaryDark"
+        android:divider="@drawable/nav_drawer_list_divider"
+        android:dividerHeight="1dp">
+    </ListView>
+
+</android.support.v4.widget.DrawerLayout>
