--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -24,9 +24,9 @@
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:scrollbars="vertical"
-        android:choiceMode="singleChoice"
         android:background="?attr/colorPrimaryDark"
+        android:choiceMode="singleChoice"
+        android:layout_marginTop="?android:attr/actionBarSize"
         android:divider="@drawable/nav_drawer_list_divider"
         android:dividerHeight="1dp">
     </ListView>
