--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -3,6 +3,7 @@
     android:id="@+id/settings_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="?android:attr/actionBarSize"
     android:orientation="vertical">
 
     <ListView
@@ -10,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp"
-        android:divider="@color/teal_dark"
+        android:divider="@drawable/nav_drawer_list_divider"
         android:dividerHeight="1dp"
         android:listSelector="@drawable/settings_list_row_selector">
     </ListView>
