Refactored many things, the settings fragment layout is now based on a RecyclerView with CardViews as entries

--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -5,14 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/settings_listview"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/settings_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="5dp"
-        android:divider="@drawable/nav_drawer_list_divider"
-        android:dividerHeight="1dp"
-        android:listSelector="@drawable/settings_list_row_selector">
-    </ListView>
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
