--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,10 +9,12 @@
 
     <string-array name="settingNames">
         <item>Forwarding Targets</item>
+        <item>Forwarding Direction</item>
     </string-array>
 
     <string-array name="settingDescriptions">
         <item>Add, edit, or remove forwarding targets</item>
+        <item>Choose forwarding direction</item>
     </string-array>
 
 </resources>
