--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -14,7 +14,7 @@
         android:gravity="center"
         android:padding="10dp"
         android:textColor="@color/White"
-        android:text="@string/main_title"
+        android:text="@string/main_screen"
         android:textSize="@dimen/main_title">
     </TextView>
 
