--- a/app/src/main/res/layout/settings_recycler_card.xml
+++ b/app/src/main/res/layout/settings_recycler_card.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/settings_row_cardview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="85dp"
     card_view:cardCornerRadius="7dp"
     card_view:cardElevation="5dp"
     card_view:cardBackgroundColor="@color/material_teal_700"
