--- a/app/src/main/res/layout/target_picker_fragment.xml
+++ b/app/src/main/res/layout/target_picker_fragment.xml
@@ -9,7 +9,8 @@
         android:id="@+id/target_picker_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:requiresFadingEdge="vertical">
+        android:requiresFadingEdge="vertical"
+        android:scrollbars="vertical">
     </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
